2003-10-02  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command.c, cong-command.h, cong-document.c, cong-document.h, cong-editor-node-text.c, cong-editor-widget3.c, cong-location.c, cong-location.h, cong-modification-cursor-change.c, cong-modification-selection-change.c, cong-node-modification-add-after.c, cong-node-modification-add-before.c, cong-node-modification-make-orphan.c, cong-node-modification-remove-attribute.c, cong-node-modification-set-attribute.c, cong-node-modification-set-parent.c, cong-node-modification-set-text.c, cong-range.c, cong-selection.h, cong-util.c, cursor.c, plugin-docbook.c, popup.c, select.c, tree.c, xmldata.c, xmledit.c

	Made old document change private, and recoded the application to make use of new CongCommand API for undo/redo support

2003-10-01  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command.c, cong-editor-widget3.c, plugin-cleanup-source.c, popup.c

	Further undo/redo-ification
	
	* popup.c, xmledit.c

	Undo/redo-ification of Span Tag application, and for clipboard operations

	* cong-node-modification-make-orphan.c, cong-node-modification-set-parent.c

	Implemented stubs
	
	* comg-command.c

	Fixed a typo, and removed an assertion
	
	* cong-modification.h

	Diabled bad declarations

	* cong-command.h, cong-command.c

	Added split3 modification
	
	* cong-node-modification-set-text.c

	Implemented what had been a stub
	
	* cong-command.c, cong-command.h

	Added lots of compound modifications

	* cong-modification-cursor-change.c, cong-modification-cursor-change.h, cong-modification-selection-change.c, cong-modification-selection-change.h, Makefile.am

	New files:  new atomic modification subclasses

2003-09-30  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-wrapper-check-button.c, cong-attribute-wrapper-radio-button.c

	Block/unblock signals when handling attribute changes to avoid polluting undo histroy with excess generated attribute changes commands

	* plugin-cleanup-source.c
