@@ -101,10 +101,11 @@ cong_eel_rgb16_to_rgb (gushort r, gushort g, gushort b)
 /**
  * cong_eel_gdk_color_to_rgb
  * @color: A GdkColor style color.
- * Returns: An rgb value.
  *
  * Converts from a GdkColor stlye color to a gdk_rgb one.
  * Alpha gets set to fully opaque
+ * 
+ * Returns: An rgb value.
  */
 guint32
 cong_eel_gdk_color_to_rgb (const GdkColor *color)
@@ -174,11 +175,16 @@ static gchar* cong_eel_utf8_capitalise(const gchar *str)
 }
 
 /**
+ * split_xmlname:
+ * @xml_name:
+ * 
  * Splits things like "this-is-a-tag" into its individual words.
  * Can handle hyphenated words.
  * FIXME:  Add support for splitting caps-seperated things like "ThisIsATag"
  * FIXME:  Probably should convert everything to lower case as well on output
  * FIXME:  To be really smart, we could try to spot acronyms and fully capitalise them...  would require a dictionary though.
+ * 
+ * Returns:
  */
 static gchar** split_xmlname(const gchar *xml_name)
 {
