@@ -107,8 +107,17 @@ cong_error_dialog_new_from_shell_command_failure_with_command_line(GtkWindow *pa
 								   const gchar *command_line);
 
 /**
+ * cong_error_dialog_new_from_shell_command_failure_with_argv
+ * @parent_window:
+ * @what_failed:
+ * @exit_status:
+ * @standard_error:
+ * @argv
+ * 
  * Routine to manufacture an error dialog for when some shell operation fails, when you have access to the stderr output in the form of a string.
  * argv is a NULL terminated array of strings.
+ * 
+ * Returns: 
  */
 GtkDialog*
 cong_error_dialog_new_from_shell_command_failure_with_argv(GtkWindow *parent_window,
@@ -175,9 +184,17 @@ cong_error_dialog_new_from_file_save_failure(GtkWindow *parent_window,
 					     const GnomeVFSFileSize* file_size);
 
 /**
+ * cong_error_dialog_new_from_file_operation_failure
+ * @parent_window:
+ * @what_failed:
+ * @file_uri: the URI from which you tried to access file.
+ * @vfs_result:
+ * @technical_details:
+ * 
  * Routine to manufacture an error dialog for when some file operation fails that doesn't fall into one of the categories above.
  * Displays what operation has failed, with a convenience button to get more techical information.
- * @vfs_uri:  the URI from which you tried to access file.
+ * 
+ * Returns:
  */
 GtkDialog*
 cong_error_dialog_new_from_file_operation_failure(GtkWindow *parent_window,
